image align fix

--- a/ekit.css
+++ b/ekit.css
@@ -40,7 +40,7 @@ body{
 .ekit-card img{
     width: 100%;
     max-width: 280px;
-    margin: auto;
+    margin: 0 auto;
     display: block;
     margin-bottom: 20px;
 }
